# InterSchem

./: CMakeLists.txt  GEMINI.md  README.md  build_log.txt  generated.cpp  log.txt  scheme.txt  scheme_autosave.txt
.github/workflows/: release.yml
builds/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/headers/Winbgim/: Makefile  cmake_install.cmake
builds/headers/Winbgim/libbgi/: Makefile  cmake_install.cmake
builds/headers/Winbgim/test/: Makefile  cmake_install.cmake
headers/: app_state.h  block.h  codegen.h  file_io.h  geometry.h  interaction.h  interpreter.h  renderer.h
headers/Winbgim/libbgi/include/bgi/: graphics.h  winbgim.h
src/: codegen.cpp  file_io.cpp  functions.cpp  interaction.cpp  interpreter.cpp  main.cpp  renderer.cpp  structs.cpp
